welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value getMondeHauteurl
  var i =getMondeHauteurl()
         ^Array1:5: error: value lenght is not a member of Array[java.awt.Color]
  for (k<-0 to T.lenght-1){
                 ^Array1:10: error: not found: value lenght
  for (j<- 0 to lenght-1){
                ^