welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var i =getMondeHauteurl()
  var T = new Array [Color](i)
  for (k<-0 to T.lenght-1){
    var m = getCouleurSol()
    T(k)=m
    avance()
  }
  for (j<- 0 to lenght-1){
    avance()
    gauche()
    avance()
    droite()
    avance()
    setCouleurBrosse(T(0))
    baisseBrosse()
    leveBrosse()
    avance()
  }
  
  
  

}